@@ -1971,6 +1971,9 @@ IDB_DUPLICATEGROUP_NEW  BITMAP                  ".\\graphics\\toolbar\\new\\dupl
 IDB_DUPLICATEGROUP_NEW_D BITMAP                  ".\\graphics\\toolbar\\new\\duplicategroup_disabled.bmp"
 IDB_DRAGAUTOX_CLASSIC   BITMAP                  ".\\graphics\\dragbar\\classic\\AutotypeX.bmp"
 IDB_DRAGAUTOX_NEW       BITMAP                  ".\\graphics\\dragbar\\new\\AutotypeX.bmp"
+IDB_CLEARFILTERS_CLASSIC BITMAP                  ".\\graphics\\toolbar\\classic\\clearfilter.bmp"
+IDB_CLEARFILTERS_NEW    BITMAP                  ".\\graphics\\toolbar\\new\\clearfilter.bmp"
+IDB_CLEARFILTERS_NEW_D  BITMAP                  ".\\graphics\\toolbar\\new\\clearfilter_disabled.bmp"
 
 /////////////////////////////////////////////////////////////////////////////
 //
