@@ -166,7 +166,7 @@ BEGIN
         POPUP "&Filters", ID_FILTERMENU, MFT_STRING
         BEGIN
             MENUITEM "&New/Edit Filter",        ID_MENUITEM_EDITFILTER, MFT_STRING
-            MENUITEM "&Apply current",          ID_MENUITEM_APPLYFILTER, MFT_STRING, MFS_CHECKED
+            MENUITEM "&Apply current",          ID_MENUITEM_APPLYFILTER, MFT_STRING
             MENUITEM "", 0, MFT_SEPARATOR
             MENUITEM "&Manage...",              ID_MENUITEM_MANAGEFILTERS, MFT_STRING
         END
