@@ -899,5 +899,5 @@ BEGIN
   IDS_SB_TT_MODIFIED       "* means that the database has been modified since last save"
   IDS_SB_TT_MODE           "Database mode: read-only (R-O) or read/write (R/W)\r\n(Doubleclick to toggle mode)"
   IDS_SB_TT_NUMENTRIES     "Number of entries in database"
-  IDS_SB_TT_FILTER         "A red and white indicator means that a filter is active\r\n(double click to clear filter)"
+  IDS_SB_TT_FILTER         "A red and white indicator means that a filter is active\r\n(if showing, double click to clear filter)"
 END
